# matSolve

./: .gitignore  ABS_8cpp.html  CMakeLists.txt  Cholesky_8cpp.html  Doxyfile  LU_8cpp.html  README.md  SQRT_8cpp.html  Thomas_8cpp.html  annotated.html  classComplex-members.html  classComplex.html  classMat-members.html  classMat.html  classRational-members.html  classRational.html  classSolver-members.html  classSolver.html  classVec-members.html  classVec.html  classes.html  climb_8cpp.html  complex_8cpp.html  complex_8h.html  complex_8h_source.html  conj_8cpp.html  descent_8cpp.html  diag_8cpp.html  dir_0cfadba24cdf603a4466a1757e1cb01d.html  dir_0d21ea3bd9fb15f1e7e5ec0e264e41eb.html  dir_19373f467389307dc54ab8a6e9e19559.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_63d3ea0de2424a750c24486ca5639d5c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_87f5cb040e6a250975f9183b3258bcd5.html  dir_a486d75551fed44ac8ad39a6145096e7.html  dir_ba5454f7802d93bb4d2742a3c6b89e3b.html  dir_c2a16025a55a4682f9107b01197f338a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e3a56c884076b0e458d27b568e1bd077.html  (+26 more)
examples/: example.cpp
include/: Complex.h  Mat.h  Rational.h  Solver.h  Vec.h  utils.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+23 more)
(+51 files in other folders)
